--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/img"
         android:id="@+id/imageView"
+        android:layout_marginTop="96dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
